// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots tree JSON tree 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-395 MuiGrid-spacing-xs-16-418"
    >
      <div
        className="MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-md-12-463 tree-wrapper Tree-root-393"
      >
        <div
          className="MuiList-root-492"
        >
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    name
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    @latticejs/tree
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    version
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    1.0.1-alpha.10
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    license
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    MIT
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    main
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    index.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    module
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    dist/es/dag.es.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-array-514"
                >
                    [  ]  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    files
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    scripts
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    peerDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    devDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    dependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    jest
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-object-515"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    publishConfig
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
          <li
            className="MuiListItem-container-497"
          >
            <div
              className="MuiButtonBase-root-507 MuiListItem-root-496 MuiListItem-default-499 MuiListItem-gutters-503 MuiListItem-button-504 MuiListItem-secondaryAction-505"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-510"
              >
                <pre
                  className="Component-root-511 Component-string-512"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-507 MuiIconButton-root-533 MuiSwitchBase-root-529 MuiCheckbox-root-523 MuiCheckbox-colorSecondary-528"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-538"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-539"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-532"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-548"
              >
                <span
                  className="MuiTypography-root-554 MuiTypography-subtitle1-572 MuiListItemText-primary-551"
                >
                  <b>
                    gitHead
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    c1aad20555302fad47d2d61d1ff0f48f6d566083
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-594"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-589"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-3 MuiGrid-spacing-xs-16-26"
    >
      <div
        className="MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-md-12-71 tree-wrapper Tree-root-1"
      >
        <div
          className="MuiList-root-100"
        >
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-115 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-111 MuiListItem-button-112 MuiListItem-secondaryAction-113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-118"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-119"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-115 MuiIconButton-root-138 MuiSwitchBase-root-134 MuiCheckbox-root-128 MuiCheckbox-colorSecondary-133"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-143"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-119"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-137"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-144"
              >
                <span
                  className="MuiTypography-root-150 MuiTypography-subtitle1-168 MuiListItemText-primary-147"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-190"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-185"
            />
          </li>
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-115 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-111 MuiListItem-button-112 MuiListItem-secondaryAction-113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-118"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-119"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-115 MuiIconButton-root-138 MuiSwitchBase-root-134 MuiCheckbox-root-128 MuiCheckbox-colorSecondary-133"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-143"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-119"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-137"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-144"
              >
                <span
                  className="MuiTypography-root-150 MuiTypography-subtitle1-168 MuiListItemText-primary-147"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-190"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-185"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree customized 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-199 MuiGrid-spacing-xs-16-222"
    >
      <div
        className="MuiGrid-item-200 MuiGrid-grid-xs-12-239 MuiGrid-grid-md-12-267 tree-wrapper Tree-root-197"
      >
        <div
          className="MuiList-root-296"
        >
          <li
            className="MuiListItem-container-301"
          >
            <div
              className="MuiButtonBase-root-311 MuiListItem-root-300 MuiListItem-default-303 MuiListItem-gutters-307 MuiListItem-button-308 MuiListItem-secondaryAction-309"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-314"
              >
                <svg
                  aria-labelledby="apksi-logos-javascript-title"
                  height="1.5em"
                  id="si-logos-javascript"
                  preserveAspectRatio="xMidYMid"
                  style={
                    Object {
                      "margin-right": 0,
                    }
                  }
                  viewBox="0 0 256 256"
                  width="1.5em"
                >
                  <title
                    id="apksi-logos-javascript-title"
                  >
                    logo of javascript
                  </title>
                  <path
                    d="M0 0h256v256H0V0z"
                    fill="#F7DF1E"
                  />
                  <path
                    d="M67.312 213.932l19.59-11.856c3.78 6.701 7.218 12.371 15.465 12.371 7.905 0 12.89-3.092 12.89-15.12v-81.798h24.057v82.138c0 24.917-14.606 36.259-35.916 36.259-19.245 0-30.416-9.967-36.087-21.996M152.381 211.354l19.588-11.341c5.157 8.421 11.859 14.607 23.715 14.607 9.969 0 16.325-4.984 16.325-11.858 0-8.248-6.53-11.17-17.528-15.98l-6.013-2.58c-17.357-7.387-28.87-16.667-28.87-36.257 0-18.044 13.747-31.792 35.228-31.792 15.294 0 26.292 5.328 34.196 19.247L210.29 147.43c-4.125-7.389-8.591-10.31-15.465-10.31-7.046 0-11.514 4.468-11.514 10.31 0 7.217 4.468 10.14 14.778 14.608l6.014 2.577c20.45 8.765 31.963 17.7 31.963 37.804 0 21.654-17.012 33.51-39.867 33.51-22.339 0-36.774-10.654-43.819-24.574"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-311 MuiIconButton-root-325 MuiSwitchBase-root-321 MuiCheckbox-root-315 MuiCheckbox-colorSecondary-320"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-330"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-331"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-324"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-340"
              >
                <span
                  className="MuiTypography-root-346 MuiTypography-subtitle1-364 MuiListItemText-primary-343"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-386"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-381"
            />
          </li>
          <li
            className="MuiListItem-container-301"
          >
            <div
              className="MuiButtonBase-root-311 MuiListItem-root-300 MuiListItem-default-303 MuiListItem-gutters-307 MuiListItem-button-308 MuiListItem-secondaryAction-309"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-314"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-331"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-311 MuiIconButton-root-325 MuiSwitchBase-root-321 MuiCheckbox-root-315 MuiCheckbox-colorSecondary-320"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-330"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-331"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-324"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-340"
              >
                <span
                  className="MuiTypography-root-346 MuiTypography-subtitle1-364 MuiListItemText-primary-343"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-386"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-381"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;
